--- a/sass/_aside.scss
+++ b/sass/_aside.scss
@@ -201,11 +201,11 @@
                 margin-bottom: 1.6rem;
 
                 #red {
-                    color: $color-red;
+                    color: #D24E26;
                 }
 
                 #green {
-                    color: #63e6be;
+                    color: #48A99C;
                 }
 
                 .square-icon {
