--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,12 +1,12 @@
 // COLOR VARIABLES
 
-$color-red-dark: #DC7035;
-$color-red: #F7997D;
+$color-red-dark: #F7845E;
+$color-red: #f38c6a;
 
-$color-orange: #EDC596;
+$color-orange: #ECCB9B;
 $color-orange-light: #ffdab8;
 
-$color-brown-light: #ECDBC9;
+$color-brown-light: #ebe3d7;
 
 $color-white: #f8f9fa;
 $color-gray: #adb5bd;
