--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,6 +1,10 @@
 .nav {
     grid-column: 1/ 2;
 
+    @media only screen and (max-width: 64em){
+        background-color: $color-brown-light;
+    }
+
     @media only screen and (max-width: 51em){
         grid-row: 1/ 2;
         grid-column: 1/ -1;
@@ -25,6 +29,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
+    @media only screen and (max-width: 51em){
+        flex-direction: row;
+    }
 }
 
 .nav {
@@ -38,8 +46,9 @@
         grid-column: 1/ -1;
         flex-direction: row;
         justify-content: space-around;
-        color: $color-white;
-        background-color: $color-black;
+        // color: $color-white;
+        // background-color: $color-black;
+        background-color: $color-brown-light;
     }
 
     @media only screen and (max-width: 43em){
@@ -77,7 +86,6 @@
             cursor: pointer;
         }
     
-
         @media only screen and (max-width: 51em){
             gap: 2.4rem;
             padding: 1.2rem 0;
@@ -87,6 +95,12 @@
             height: 2.4rem;
             width: 2.4rem;
             padding: 1.4rem;
+
+            @media only screen and (max-width: 51em){
+                padding: 1rem;
+                height: 3rem;
+                width: 3rem;
+            }
         }
 
         .nav__icon.selected {
@@ -97,8 +111,8 @@
                 grid-column: 1/ -1;
                 flex-direction: row;
                 justify-content: space-around;
-                color: $color-white;
-                background-color: $color-black;
+                // color: $color-white;
+                // background-color: $color-black;
             }
         }
     }
